Correct alignment of menu accelerator strings in owner-drawn menus.

Draw them right-aligned as the native menus do.

Closes #11479.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/ownerdraw-refactor@62712 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775